syntax = "proto3";

package listing.service;

option java_package = "com.bondgraine.listingmicroservice.grpc";
option java_multiple_files = true;

import "service/listing/get_post_response.proto";
import "service/listing/get_post_request.proto";

service ListingService {
  rpc GetPost(GetPostRequest) returns (GetPostResponse);
}